--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -2,6 +2,10 @@ name: Semantic Release
 
 on:
   workflow_call:
+     secrets:
+      GH_PAT:
+        description: "bluebot-gh-deploys user's Personal Access Token for pushing releases"
+        required: false
 
 permissions:
   contents: write
@@ -17,6 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GH_PAT || github.token }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -34,7 +39,7 @@ jobs:
       - name: Release
         id: release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT || github.token }}
         run: |
           npx semantic-release > release.log 2>&1
           # Extract the published version from the log if present
