--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -6,6 +6,9 @@ on:
       GH_PAT:
         description: "bluebot-gh-deploys user's Personal Access Token for pushing releases"
         required: false
+      SLACK_WEBHOOK:
+        description: "Slack webhook URL for release notifications"
+        required: false
 
 permissions:
   contents: write
@@ -64,7 +67,7 @@ jobs:
           fi
 
       - name: Slack notification
-        if: steps.release.outputs.RELEASE_CREATED == 'true'
+        if: steps.release.outputs.RELEASE_CREATED == 'true' && vars.SLACK_WEBHOOK != ''
         run: |
           curl -X POST -H 'Content-type: application/json' \
           --data '{"blocks": [{"type": "section", "text": {"type": "mrkdwn", "text": ":sunglasses: *<https://github.com/${{ github.repository }}/releases/tag/v${{ steps.release.outputs.VERSION }}|v${{ steps.release.outputs.VERSION }}>* of *${{ github.repository }}* released by *${{ github.actor }}*"}}]}' \
