--- a/.github/workflows/call-semantic-release.yaml
+++ b/.github/workflows/call-semantic-release.yaml
@@ -9,4 +9,6 @@ on:
 jobs:
   semantic-release:
     uses: bluebotgroup/github-actions/.github/workflows/semantic-release.yaml@main
-    secrets: inherit
+    secrets: 
+      SLACK_WEBHOOK: ${{ vars.SLACK_WEBHOOK }}
+      GH_PAT: ${{ secrets.GH_PAT }}
