--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -30,14 +30,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          cache: 'npm'
-          cache-dependency-path: 'package-lock.json'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Verify dependency signatures
-        run: npm audit signatures
 
       - name: Release
         id: release
@@ -45,7 +37,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_PAT || github.token }}
         run: |
           set +e  # Don't exit on error
-          npx semantic-release > release.log 2>&1
+          cd $GITHUB_WORKSPACE
+          npx --package semantic-release --package @semantic-release/commit-analyzer --package @semantic-release/release-notes-generator --package @semantic-release/github -- semantic-release > release.log 2>&1
           semantic_release_exit_code=$?
           
           # Extract the published version from the log if present
